Tweak arrow on hero section to prevent overflow on other elements on screens with very low height

--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -12,6 +12,8 @@
   }
 }
 
-.fa-lightbulb-o {
-  color: $neon-yellow;
+.menu-text {
+  i {
+    color: $neon-yellow;  
+  }
 }
